<resources>
    <string name="app_name">Sushi Pricer</string>

    <string name="hello_world">Hello world!</string>

    <string name="subtotal">Subtotal: </string>
    <string name="price_sub">0.00</string>
    <string name="tax">Tax: </string>
    <string name="price_tax">0.00</string>
    <string name="total">Total: </string>
    <string name="price_tot">0.00</string>
    <string name="add">Add a dish</string>

    <string name="action_settings">Settings</string>
</resources>
