<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="#3e3e3e"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:textColor="#3e3e3e"
        android:textSize="24sp"
        android:layout_below="@+id/purple"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="60dp"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#3e3e3e"
        android:text="@string/price_sub"
        android:layout_alignTop="@+id/textView2"
        android:layout_toLeftOf="@+id/orange"
        android:layout_toStartOf="@+id/orange"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="24sp"
        android:textColor="#3e3e3e"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_tax"
        android:textSize="24sp"
        android:textColor="#3e3e3e"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:id="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="24sp"
        android:textColor="#3e3e3e"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_tot"
        android:textSize="24sp"
        android:textColor="#3e3e3e"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:id="@+id/textView7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yellow"
        android:background="#ffff00"
        android:layout_alignTop="@+id/blue"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blue"
        android:background="#0000ff"
        android:layout_above="@+id/purple"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/green"
        android:background="#00ff00"
        android:layout_alignTop="@+id/blue"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/red"
        android:background="#ff0000"
        android:layout_alignTop="@+id/purple"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/purple"
        android:background="#ff00ff"
        android:layout_alignTop="@+id/orange"
        android:layout_alignLeft="@+id/blue"
        android:layout_alignStart="@+id/blue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/orange"
        android:background="#ffa500"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/green"
        android:layout_alignStart="@+id/green" />

</RelativeLayout>
